add order documentation
